<resources>
    <string name="app_name">Shake It</string>

    <!-- 소셜 로그인 -->
    <string name="facebook_app_id">427990257959693</string>
    <string name="fb_login_protocol_scheme">fb427990257959693</string>



    <!-- EditText Hint -->
    <string name="input_email_hint">이메일</string>
    <string name="input_password_hint">비밀번호</string>
    <string name="input_name_hint">이름</string>
    <string name="input_password_again_hint">비밀번호 확인</string>


    <string name="msg_login">로그인</string>
    <string name="msg_for_incorrect_email">이메일 형식을 잘못 입력하셨습니다</string>
    <string name="msg_for_incorrect_password">비밀번호 형식을 잘못 입력하셨습니다</string>
    <string name="msg_for_incorrect_password_again">비밀번호가 일치 하지 않습니다</string>
    <string name="msg_for_incorrect_name">이름 형식을 잘못 입력하셨습니다</string>
    <string name="msg_for_success_login">로그인에 성공하였습니다</string>
    <string name="msg_for_failure_login">로그인에 실패하였습니다</string>
    <string name="msg_facebook_login">페이스북 로그인</string>
    <string name="msg_signup">회원가입</string>
    <string name="msg_for_success_signUp">회원가입에 성공하셨습니다</string>
    <string name="msg_for_failure_signUp">회원가입에 실패하셨습니다</string>
    <string name="msg_for_failure_signUp_becauseOfOverlapEmail">이미 사용중인 사용자가 있습니다</string>
    <string name="msg_logout">로그아웃</string>
    <string name="msg_profile_image">프로필 이미지</string>
    <string name="msg_send">보내기</string>
    <string name="msg_charge">충전</string>
    <string name="input_status_message_hint">상태메시지</string>
    <string name="msg_update">수정</string>
    <string name="permission_denied_title">권한거부</string>
    <string name="permission_denied_message"><![CDATA[허가를 거부하면 이 서비스를 사용하실 수 없습니다.\n\n[설정] > [권한] 에서 권한을 켜주세요.]]></string>
    <string name="msg_for_failure_upload">업로드 실패</string>
    <string name="msg_search">검색</string>
    <string name="msg_for_error">에러가 발생하였습니다</string>
    <string name="msg_user_not_found">사용자를 찾을 수 없습니다</string>
    <string name="msg_user_not_found_content">이메일을 확인하고 다시 시도하십시오</string>
    <string name="msg_add_friend">친구 추가</string>
    <string name="msg_for_already_friend">이미 친구목록에 있습니다</string>
    <string name="msg_direct_chat">1:1 채팅</string>
    <string name="msg_for_failure_becauseOfMyself">자기 자신을 친구추가 하실 수 없습니다</string>
    <string name="msg_for_failure">문제가 발생하였습니다</string>
    <string name="msg_read">여기까지 읽으셨습니다</string>
    <string name="msg_select_target">대상 선택</string>
    <string name="msg_invite">초대</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="msg_apply">적용</string>
    <string name="msg_gray">흑백</string>
    <string name="msg_original">원본</string>
    <string name="msg_brightness">밝기</string>
    <string name="msg_contrast">대비</string>
    <string name="msg_blur">흐림</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="channel_error_title">Connection error</string>
    <string name="ok">OK</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="msg_decline">거절</string>
    <string name="msg_accept">승인</string>
    <string name="msg_participants">참여자들</string>
    <string name="msg_shake">흔들기</string>
    <string name="msg_confirm">확인</string>
    <string name="msg_shake_tip_content">휴대폰을 흔들어서 바로 옆 또는 지구 반대편에서 흔들고 있는 다른 사람들을 검색하십시오.\n\n낯선 사람에게 개인 정보를 제공하는 것을 주의해야 합니다.</string>
    <string name="msg_tip">팁</string>
    <string name="msg_before_shake_content">휴대폰을 흔들어주세요</string>
    <string name="msg_shaking_content">휴대폰을 흔든 사람을 찾는중...</string>
    <string name="msg_for_not_found">휴대폰을 흔든 사람을 찾을 수 없습니다</string>
    <string name="msg_for_found">휴대폰을 흔든 사람을 찾았습니다</string>
    <string name="msg_no_response">응답이 없어 종료합니다</string>
    <string name="msg_calling">Calling...</string>
    <string name="msg_disconnect_call">통화를 종료합니다</string>
    <string name="msg_charge_amount">충전금액(원)</string>
    <string name="msg_do_charge">충전하기</string>
    <string name="msg_for_charge_over_1000">최소 1천원 이상 충전 가능</string>
    <string name="msg_wire_select_target">송금 대상 선택</string>
    <string name="msg_wire">송금</string>
    <string name="msg_to">에게</string>
    <string name="msg_wire_amount">보낼금액(원)</string>
    <string name="msg_for_lack_of_point">포인트가 부족합니다</string>
    <string name="msg_for_lack_of_point_slide"> / 포인트가 부족합니다</string>
    <string name="msg_for_success_wire">송금이 완료되었습니다</string>
    <string name="msg_for_wait">잠시만 기다려주세요</string>

    <string name="notification_channel_message_title">Message</string>
    <string name="notification_channel_message_description">Receive notification about new message.</string>
    <string name="notification_channel_notice_title">Notice</string>
    <string name="notification_channel_notice_description">Receive notification about our service\'s notice</string>
    <string name="msg_for_camera_off">Your friend has turned off the camera</string>
    <string name="msg_download_success">이미지 파일을 저장하였습니다</string>
</resources>
