<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_back_white_36dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:text="@string/msg_login"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.example.kjh.shakeit.utils.ClearEditText
            android:id="@+id/inputEmail"
            android:hint="@string/input_email_hint"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:layout_width="match_parent" />


        <com.example.kjh.shakeit.utils.ClearEditText
            android:id="@+id/inputPassword"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <Button
            android:id="@+id/emailLoginButton"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_login" />

    </LinearLayout>


</LinearLayout>