<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:src="@drawable/ic_back_black_48dp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_round_edge"
        android:orientation="vertical">

        <com.example.kjh.shakeit.view.ClearEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textCursorDrawable="@drawable/color_cursor"
            android:hint="@string/input_email_hint"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/background_grey_dark2"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_primary" />

        <com.example.kjh.shakeit.view.ClearEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="16dp"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="@color/background_grey_dark2"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_primary" />

        <com.example.kjh.shakeit.view.ClearEditText
            android:id="@+id/inputPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="16dp"
            android:hint="@string/input_password_again_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="@color/background_grey_dark2"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey_primary" />

        <com.example.kjh.shakeit.view.ClearEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="16dp"
            android:hint="@string/input_name_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textColor="@color/background_grey_dark2"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:text="@string/msg_signup"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>